--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,9 +7,6 @@ authors = [
 ]
 readme = "README.md"
 requires-python = ">=3.12"
-dependencies = [
-    "pandas (>=3.0.0,<4.0.0)"
-]
 
 [project.scripts]
 taxa-viz = "taxa_viz.cli:main"
@@ -17,6 +14,8 @@ taxa-viz = "taxa_viz.cli:main"
 [tool.poetry]
 packages = [{include = "taxa_viz", from = "src"}]
 
+[tool.poetry.dependencies]
+pandas = "2.3.2"
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
 build-backend = "poetry.core.masonry.api"
